--- a/view/MainView.xaml
+++ b/view/MainView.xaml
@@ -21,11 +21,41 @@
         <Grid Grid.Row="1" Grid.Column="0" Background="WhiteSmoke">
             <Border BorderBrush="Black" BorderThickness="1"  Margin="100,50,100,50">
                 <ListBox>
-                    
+
+                    <!--Templateがよくわからん-->
+                    <!--ItemPanelは，アイテムを並べるためのパネル外枠-->
+                    <!--ItemContainerStyleは，各アイテムを並べるために用意されてる Style を指定-->
+                    <!--ItemTemplateは，各アイテムを表現するテンプレートを指定．ItemTemplateのなかにもItemControlが置ける？-->
+                    <ListBox.Template>
+                        <ControlTemplate TargetType="{x:Type ListBox}">
+                            <Border>
+                                <ItemsPresenter />
+                            </Border>
+                        </ControlTemplate>
+                    </ListBox.Template>                    <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Horizontal" />
+                        </ItemsPanelTemplate>
+                    </ListBox.ItemsPanel>                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel>
+                                <TextBlock>
+                                    <TextBlock.Text>
+                                        <MultiBinding StringFormat="氏名:{0} ({1})">
+                                            <Binding Path="FullName" />
+                                            <Binding Path="Age" />
+                                        </MultiBinding>
+                                    </TextBlock.Text>
+                                </TextBlock>
+                                <TextBlock Text="{Binding IsAuthenticated}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
                 </ListBox>
             </Border>
         </Grid>
 
+        <!--参考サイト：https://ufcpp.net/study/dotnet/wpf_template.html-->
 
         <!--必要な要素：日付，気温，湿度，状態，最高最低気温-->
 
